# scalling-service

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
backend/: manage.py
backend/accounts/: admin.py  forms.py  models.py
backend/accounts/migrations/: 0001_initial.py
backend/api/: api.py  api_router.py  responses.py
backend/api/routers/: posts.py
backend/core/: exceptions.py  settings.py  strings.py  structures.py  urls.py
backend/posts/: admin.py  models.py
backend/posts/crud/: comments.py
backend/posts/mappers/: comments.py
backend/posts/migrations/: 0001_initial.py  0002_auto_20230126_1702.py  0003_alter_post_managers_alter_posttag_managers.py
backend/posts/schemas/: comments.py
backend/posts/services/: comments.py  posts.py
backend/posts/tests/: conftest.py
backend/posts/tests/crud/: test_comments.py
backend/posts/tests/mappers/: test_comments.py
backend/posts/tests/services/: test_comments.py  test_posts.py
backend/users/: admin.py  models.py  utils.py
backend/users/migrations/: 0001_initial.py  0002_alter_friendship_managers_alter_interests_managers_and_more.py
backend/users/schemas/: users.py
backend/users/services/: users.py
backend/users/tests/: conftest.py
backend/users/tests/services/: test_users.py
